--- a/AsiHack.Base/Web.config
+++ b/AsiHack.Base/Web.config
@@ -8,6 +8,11 @@
         <httpRuntime targetFramework="4.6.1" />
       </system.Web>
   -->
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="AsiHack.Base.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpHandlers>
@@ -22,4 +27,11 @@
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </handlers>
   </system.webServer>
+  <applicationSettings>
+    <AsiHack.Base.Properties.Settings>
+      <setting name="ConnectionString" serializeAs="String">
+        <value />
+      </setting>
+    </AsiHack.Base.Properties.Settings>
+  </applicationSettings>
 </configuration>
