--- a/AsiHack.Base/packages.config
+++ b/AsiHack.Base/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="1.4.3" targetFramework="net40" />
+  <package id="Nancy.Authentication.Forms" version="1.4.1" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NPoco" version="3.4.1" targetFramework="net461" />
-  <package id="SimpleIoC" version="0.1.4" targetFramework="net461" />
 </packages>
