--- a/AsiHack.Base/packages.config
+++ b/AsiHack.Base/packages.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net40" />
   <package id="Nancy.Authentication.Forms" version="1.4.1" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NPoco" version="3.4.1" targetFramework="net461" />
+  <package id="SQLite.CodeFirst" version="1.2.4.16" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.102.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.102.0" targetFramework="net461" />
 </packages>
