Added test login functionality

--- a/AsiHack.Base/AsiHack.Base.csproj
+++ b/AsiHack.Base/AsiHack.Base.csproj
@@ -169,12 +169,15 @@
     <Content Include="Views\login.html" />
     <Content Include="Views\sideNav.html" />
     <Content Include="Views\topNav.html" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Framework\Attributes.cs" />
     <Compile Include="Framework\SimpleIoC.cs" />
+    <Compile Include="Framework\Status.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Modules\IndexModule.cs" />
     <Compile Include="Modules\LoginModule.cs" />
