--- a/AsiHack.Base/AsiHack.Base.csproj
+++ b/AsiHack.Base/AsiHack.Base.csproj
@@ -67,10 +67,6 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NPoco, Version=3.4.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NPoco.3.4.1\lib\net45\NPoco.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="SQLite.CodeFirst, Version=1.2.4.16, Culture=neutral, PublicKeyToken=eb96ba0a78d831a7, processorArchitecture=MSIL">
       <HintPath>..\packages\SQLite.CodeFirst.1.2.4.16\lib\net45\SQLite.CodeFirst.dll</HintPath>
       <Private>True</Private>
@@ -167,6 +163,11 @@
     <Content Include="Assets\js\plugins\jquery\jquery-3.1.0.min.js" />
     <Content Include="Assets\js\plugins\jquery\scroll.js" />
     <Content Include="Assets\nancy-logo.png" />
+    <Content Include="Script\Homepage.js" />
+    <Content Include="Script\Login.js" />
+    <Content Include="sqlite3.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Views\Homepage.html">
       <SubType>Designer</SubType>
     </Content>
@@ -182,7 +183,9 @@
     <Compile Include="Framework\Attributes.cs" />
     <Compile Include="Framework\SimpleIoC.cs" />
     <Compile Include="Framework\Status.cs" />
+    <Compile Include="Models\FlashCard.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Modules\DataModule.cs" />
     <Compile Include="Modules\Homepage.cs" />
     <Compile Include="Modules\IndexModule.cs" />
     <Compile Include="Modules\LoginModule.cs" />
@@ -193,7 +196,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Services\Authentication.cs" />
-    <Compile Include="Services\DbContext.cs" />
     <Compile Include="Services\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
