--- a/Alliance.NihonggoFlash/App.config
+++ b/Alliance.NihonggoFlash/App.config
@@ -8,7 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings >
-    <add name="FlashCardsDb" 
+    <add name="FlashCardsDb"
      connectionString="Data Source=flashcards.db"
      providerName="System.Data.Sqlite" />
   </connectionStrings>
@@ -38,6 +38,9 @@
       </setting>
       <setting name="LastFlashCardIndex" serializeAs="String">
         <value>0</value>
+      </setting>
+      <setting name="FlashCardUpdateUrl" serializeAs="String">
+        <value>http://localhost:12008/GetData</value>
       </setting>
     </Alliance.NihonggoFlash.Properties.Settings>
   </userSettings>
