--- a/Alliance.NihonggoFlash/packages.config
+++ b/Alliance.NihonggoFlash/packages.config
@@ -4,6 +4,7 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net452" />
   <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.3.0-ALPHA184" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="net452" developmentDependency="true" />
   <package id="SQLite.CodeFirst" version="1.2.4.16" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net452" />
