--- a/AsiHack.Base/packages.config
+++ b/AsiHack.Base/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="2.16.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net40" />
   <package id="Nancy.Authentication.Forms" version="1.4.1" targetFramework="net461" />
